# exp1

./: .cursorrules  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  GEMINI.md  MEMORY.md  QUICKSTART.md  README.md  aicli.yaml  aicli_memory.md  cli.py  config_loader.py  requirements.txt
backend/: main.py  pyproject.toml  requirements.txt  start_backend.sh
backend/agents/: agent.py  orchestrator.py
backend/core/: api_keys.py  auth.py  config.py  database.py  db_migrations.py  db_schema.sql  embeddings.py  encryption.py  graph_runner.py  llm_clients.py  logger.py  pipeline_log.py  pricing.py  project_paths.py  prompt_loader.py  provider_usage_api.py  seq.py  tags.py  user.py  work_item_pipeline.py  workflow_runner.py
backend/data/: clean_pg_db.py  database.py  dl_api_keys.py  dl_seq.py  dl_user.py
backend/memory/: __init__.py  _wi_classify.py  _wi_helpers.py  _wi_markdown.py  embeddings.py  mem_embeddings.py  mem_sessions.py  memory.yaml  memory_backlog.py  memory_code_parser.py  memory_embedding.py  memory_extraction.py  memory_feature_snapshot.py  memory_files.py  memory_mirroring.py  memory_planner.py  memory_promotion.py  memory_sessions.py  memory_tagging.py  memory_work_items.py  sessions.py
backend/migrations/: 001_consolidation.sql
backend/models/: user.py
backend/pipelines/: pipeline_git.py  pipeline_graph_runner.py  pipeline_runner.py  pipeline_work_items.py
backend/prompts/: agent_react.yaml  architect.md  backlog.yaml  command_commits.yaml  command_memory.yaml  command_work_items.yaml  commit.yaml  conflict_detection.yaml  developer.md  misc.yaml  (+21 more)
(+569 files in other folders)
