[project]
name = "aicli-backend"
version = "2.2.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
pythonPath = "."
extraPaths = ["."]
venvPath = ".."
venv = ".venv"

[tool.ruff]
line-length = 100
target-version = "py312"
